# fhbg-eligibility-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  test.yml
.kilo/agent/: README.md
docs/: adr.md  agent_workflow.md  agents.md  api_reference.md  architecture.md  changelog.md  code_of_conduct.md  contributing.md  demo_guide.md  performance.md  security.md  troubleshooting.md
notebooks/: demo.ipynb
scripts/: seed_db.py
src/agents/: __init__.py  conversation_manager.py  reporter.py  rule_interpreter.py  rule_scraper.py
src/chatbot/: __init__.py  actions.py  cli.py  config.yml  domain.yml  endpoints.yml  nlu.yml  rules.yml  stories.yml
src/chatbot/templates/: report.html.j2
src/utils/: __init__.py  config.py  helpers.py
tests/: __init__.py  conftest.py  test_conversation_manager.py  test_reporter.py  test_rule_interpreter.py  test_rule_scraper.py
