[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fhbg-eligibility-bot"
version = "0.1.0"
description = "AI-powered chatbot for Australian first home buyer grant eligibility"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "rasa>=3.6.0,<4.0",
    "beautifulsoup4>=4.12.0,<5.0",
    "requests>=2.31.0,<3.0",
    "langchain>=0.1.0,<0.2",
    "faiss-cpu>=1.7.4,<2.0",
    "python-dotenv>=1.0.0,<2.0",
    "sqlalchemy>=2.0.0,<3.0",
    "jinja2>=3.1.0,<4.0",
    "weasyprint>=60.0,<61.0",
    "pytest>=7.4.0,<8.0",
    "pytest-asyncio>=0.21.0,<0.22",
]

[project.optional-dependencies]
dev = [
    "black>=23.0,<24",
    "ruff>=0.1.0,<0.2",
    "safety>=3.0,<4.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
